--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
   position: absolute;
   top: 50%;
   right: -5px;
-  background-color: #24d278;
+  background-color: #043D5F;
   -webkit-transform: translate(100%, -50%);
           transform: translate(100%, -50%);
 }
@@ -57,7 +57,7 @@ body {
 /*header section*/
 .hero_area {
   height: 100vh;
-  background-image: url(../images/hero-bg.jpg);
+  /* background-image: url(../images/hero-bg.jpg); */
   background-size: cover;
   position: relative;
   background-repeat: no-repeat;
@@ -130,7 +130,7 @@ body {
 }
 
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item.active .nav-link, .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item:hover .nav-link {
-  color: #24d278;
+  color: #043D5F;
 }
 
 a,
@@ -215,7 +215,7 @@ a:focus {
 }
 
 .login_btn-container a {
-  color: #24d278;
+  color: #043D5F;
   text-transform: uppercase;
 }
 
@@ -277,7 +277,7 @@ a:focus {
 }
 
 .slider_section .detail-box h1 {
-  color: #24d278;
+  color: #043D5F;
   text-transform: uppercase;
 }
 
@@ -304,7 +304,7 @@ a:focus {
 .slider_section .detail-box .btn-box .btn-1 {
   display: inline-block;
   padding: 6px 0;
-  background-color: #24d278;
+  background-color: #043D5F;
   color: #ffffff;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -315,8 +315,8 @@ a:focus {
 
 .slider_section .detail-box .btn-box .btn-1:hover {
   background-color: transparent;
-  border-color: #24d278;
-  color: #24d278;
+  border-color: #043D5F;
+  color: #043D5F;
 }
 
 .slider_section .detail-box .btn-box .btn-2 {
@@ -354,8 +354,169 @@ a:focus {
   width: 100%;
 }
 
+.slider_section .img-containers {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.slider_section .img-containers .img-box {
+  width: 720px;
+}
+
+.slider_section .img-containers .img-box img {
+  width: 100%;
+}
+.list-group-horizontal .list-group-item {
+  display: inline-block;
+}
+.list-group-horizontal .list-group-item {
+margin-bottom: 0;
+margin-left:-4px;
+margin-right: 0;
+}
+*{
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: 'Open Sans';
+}
+
+h1 {
+  font-weight: 100;
+  margin: 0;
+}
+
+section {
+  column-width: 300px;
+  column-gap: 5px;
+  padding: 5px;
+}
+
+section img {
+  width: 100%;
+  cursor: pointer;
+}
+
+.lightbox {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: none;
+  background: #7f8c8d;
+  perspective: 1000;
+}
+
+.filter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: blur(20px);
+  opacity: 0.5;
+  background-position: center;
+  background-size: cover;
+}
+
+.lightbox img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateY(0deg);
+  max-height: 95vh;
+  max-width: calc(95vw - 100px);
+  transition: 0.8s cubic-bezier(0.7, 0, 0.4, 1);
+  transform-style: preserve-3d;
+}
+
+
+/*.lightbox:hover img{
+  transform: translate(-50%, -50%) rotateY(180deg);
+}*/
+
+[class^="arrow"] {
+  height: 200px;
+  width: 50px;
+  background: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+[class^="arrow"]:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+  width: 15px;
+  height: 15px;
+}
+
+.arrowr {
+  right: 0;
+}
+
+.arrowr:after {
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+}
+
+.arrowl {
+  left: 0;
+}
+
+.arrowl:after {
+  border-left: 1px solid white;
+  border-top: 1px solid white;
+}
+
+.close {
+  position: absolute;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  background: rgba(0, 0, 0, 0.4);
+  margin: 20px;
+  cursor: pointer;
+}
+
+.close:after,
+.close:before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1px;
+  height: 100%;
+  background: #e74c3c;
+}
+
+.close:after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.close:before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.title {
+  font-size: 20px;
+  color: #000;
+  z-index: 1000;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 .slider_section .play_btn {
-  background-color: #24d278;
+  background-color: #043D5F;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -404,7 +565,7 @@ a:focus {
   position: absolute;
   top: 50%;
   left: 50%;
-  background-color: #24d278;
+  background-color: #043D5F;
   opacity: 1;
   border-radius: 100%;
   -webkit-transform: translate(-50%, -50%);
@@ -458,7 +619,7 @@ a:focus {
   width: 15px;
   height: 15px;
   border-radius: 100%;
-  background-color: #24d278;
+  background-color: #043D5F;
   opacity: 1;
   border: none;
   background-clip: unset;
@@ -528,7 +689,7 @@ a:focus {
 
 .trending_section .tab_container .t-link-box {
   margin: 65px 0;
-  color: #24d278;
+  color: #043D5F;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -545,7 +706,7 @@ a:focus {
 }
 
 .trending_section .tab_container .t-link-box hr {
-  background-color: #24d278;
+  background-color: #043D5F;
   width: 60px;
   height: 1.5px;
   border: none;
@@ -561,7 +722,7 @@ a:focus {
 }
 
 .trending_section .tab_container .t-link-box[aria-expanded="true"] .t-name {
-  color: #24d278;
+  color: #043D5F;
 }
 
 .trending_section .img_container {
@@ -618,7 +779,7 @@ a:focus {
 .discount_section .detail-box h2.main_heading {
   font-size: 3rem;
   padding: 0;
-  color: #24d278;
+  color: #043D5F;
   text-transform: uppercase;
 }
 
@@ -673,7 +834,7 @@ a:focus {
 }
 
 .brand_section .brand_container .box h6.price {
-  color: #24d278;
+  color: #043D5F;
 }
 
 .brand_section .brand_container .box .new {
@@ -694,7 +855,7 @@ a:focus {
 }
 
 .brand_section .brand_container .box:hover {
-  background-color: #24d278;
+  background-color: #043D5F;
 }
 
 .brand_section .brand_container .box:hover h6.price {
@@ -780,7 +941,7 @@ a:focus {
 .contact_section button {
   display: inline-block;
   padding: 12px 45px;
-  background-color: #24d278;
+  background-color: #043D5F;
   color: #ffffff;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -793,8 +954,8 @@ a:focus {
 
 .contact_section button:hover {
   background-color: transparent;
-  border-color: #24d278;
-  color: #24d278;
+  border-color: #043D5F;
+  color: #043D5F;
 }
 
 .contact_section .map_container {
@@ -851,7 +1012,7 @@ a:focus {
 }
 
 .client_section .client_box .client-id .name p {
-  color: #24d278;
+  color: #043D5F;
   margin: 0;
 }
 
@@ -887,7 +1048,7 @@ a:focus {
   margin: 0 auto 45px auto;
   padding-bottom: 10px;
   text-align: center;
-  border-bottom: 1px solid #ffffff;
+ 
 }
 
 .info_section .info_logo h2 {
@@ -958,7 +1119,7 @@ a:focus {
 .info_section .info_form form button {
   display: inline-block;
   padding: 8px 30px;
-  background-color: #24d278;
+  background-color: #043D5F;
   color: #ffffff;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -971,8 +1132,8 @@ a:focus {
 
 .info_section .info_form form button:hover {
   background-color: transparent;
-  border-color: #24d278;
-  color: #24d278;
+  border-color: #043D5F;
+  color: #043D5F;
 }
 
 .info_section .info_form .social_box {
@@ -1072,5 +1233,21 @@ a:focus {
 .menu_btn-style button .s-3 {
   -webkit-transform: rotate(-45deg) translate(7px, -10px);
           transform: rotate(-45deg) translate(7px, -10px);
+}
+.list-group-horizontal .list-group-item {
+  display: inline-block;
+}
+.list-group-horizontal .list-group-item {
+margin-bottom: 0;
+margin-left:-4px;
+margin-right: 0;
+}
+.list-group-horizontal .list-group-item:first-child {
+border-top-right-radius:0;
+border-bottom-left-radius:4px;
+}
+.list-group-horizontal .list-group-item:last-child {
+border-top-right-radius:4px;
+border-bottom-left-radius:0;
 }
 /*# sourceMappingURL=style.css.map */
